# lqcli

./: Cargo.toml  README.md
src/: config.rs  fetch.rs  lingq.rs  main.rs  openai.rs  source.rs
