[package]
name = "lqcli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
async-openai = "^0.26"
owo-colors = { version = "^4.1", features = ["supports-colors"] }
serde = { version = "^1.0", features = ["derive"] }
shellexpand = "^3.1"
tabled = "^0.17"
tokio = { version = "1", features = ["full"] }
toml = "^0.8"