[package]
name = "lqcli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "^0.26"
atom_syndication = "^0.12"
clap = { version = "^4.5", features = ["derive"] }
owo-colors = { version = "^4.1", features = ["supports-colors"] }
reqwest = { version = "0.12", features = ["json"] }
rss = "^2.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
shellexpand = "^3.1"
tabled = "^0.17"
thiserror = "^1.0"
tokio = { version = "1", features = ["full"] }
toml = "^0.8"